[gd_scene load_steps=5 format=1]

[ext_resource path="res://scenes/Color_Puzzle.gd" type="Script" id=1]
[ext_resource path="res://Circles.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=2]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
bg_color = Color( 1, 0, 0, 1 )
light_color = Color( 0.8, 0.8, 0.8, 1 )
dark_color = Color( 0.8, 0.8, 0.8, 1 )
border_size = 0
border_blend = true
draw_bg = true

[sub_resource type="StyleBoxFlat" id=1]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
bg_color = Color( 1, 0, 0, 1 )
light_color = Color( 0.8, 0.8, 0.8, 1 )
dark_color = Color( 0.8, 0.8, 0.8, 1 )
border_size = 0
border_blend = true
draw_bg = true

[node name="Node2D" type="Node2D"]

script/script = ExtResource( 1 )

[node name="red" type="HSlider" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 28.0
margin/top = 32.0
margin/right = 436.0
margin/bottom = 63.0
custom_styles/grabber_hilite = SubResource( 2 )
custom_styles/focus = SubResource( 1 )
range/min = 0.0
range/max = 255.0
range/step = 1.0
range/page = 0.0
range/value = 1.0
range/exp_edit = false
range/rounded = false
tick_count = 0
ticks_on_borders = true
focus_mode = 2

[node name="lbl" type="Label" parent="red"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 424.0
margin/top = 1.0
margin/right = 464.0
margin/bottom = 15.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "00"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="green" type="HSlider" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 28.0
margin/top = 65.0
margin/right = 436.0
margin/bottom = 96.0
custom_styles/grabber_hilite = SubResource( 2 )
custom_styles/focus = SubResource( 1 )
range/min = 0.0
range/max = 255.0
range/step = 1.0
range/page = 0.0
range/value = 1.0
range/exp_edit = false
range/rounded = false
tick_count = 0
ticks_on_borders = true
focus_mode = 2

[node name="lbl" type="Label" parent="green"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 424.0
margin/top = 1.0
margin/right = 464.0
margin/bottom = 15.0
custom_colors/font_color = Color( 0, 1, 0.0390625, 1 )
text = "00"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="blue" type="HSlider" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 29.0
margin/top = 100.0
margin/right = 437.0
margin/bottom = 131.0
custom_styles/grabber_hilite = SubResource( 2 )
custom_styles/focus = SubResource( 1 )
range/min = 0.0
range/max = 255.0
range/step = 1.0
range/page = 0.0
range/value = 1.0
range/exp_edit = false
range/rounded = false
tick_count = 0
ticks_on_borders = true
focus_mode = 2

[node name="lbl" type="Label" parent="blue"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 424.0
margin/top = 1.0
margin/right = 464.0
margin/bottom = 15.0
custom_colors/font_color = Color( 0.46167, 0.517132, 0.96875, 1 )
text = "00"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Circles" type="Node2D" parent="."]

script/script = ExtResource( 2 )

[node name="Solved" type="Label" parent="."]

rect/scale = Vector2( 2, 2 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 244.0
margin/top = 252.0
margin/right = 309.0
margin/bottom = 285.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[connection signal="value_changed" from="red" to="." method="_on_red_value_changed"]

[connection signal="value_changed" from="green" to="." method="_on_green_value_changed"]

[connection signal="value_changed" from="blue" to="." method="_on_blue_value_changed"]


